set new endpoints and accident list

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,3 +15,16 @@
 .features-label {
   margin-right: 10px;
 }
+
+.good {
+  color: green
+}
+
+.danger {
+  color: red
+}
+
+.car-action-buttons {
+  display: flex;
+  gap: 5px
+}
